--- a/MultiLabelClassificationGitHub.ipynb
+++ b/MultiLabelClassificationGitHub.ipynb
@@ -739,7 +739,7 @@
         "# If the number of distinct labels is high and the data is sparse, i would ideally compile the model using the below line\n",
         "#model.compile(loss='binary_crossentropy', optimizer='adam') \n",
         "\n",
-        "# x_train and y_train are Numpy arrays \n",
+        "# y_train is a Numpy arrays \n",
         "model.fit(x_train, y_train, epochs=150, batch_size=36, verbose = 0) # Using verbose = 0 as the interim output will make the notebook huge"
       ],
       "execution_count": 6,
