--- a/MultiLabelClassificationGitHub.ipynb
+++ b/MultiLabelClassificationGitHub.ipynb
@@ -905,8 +905,7 @@
         "# Conclusion\n",
         "There is **nothing wrong** with the keras accuracy metric. <br>\n",
         "It is working the way it is intended to work. It considers each record-label prediction as an individual event.<br>\n",
-        "I've written a story on Medium explaining how 'Accuracy' works for a multi label classification problem and how to avoid any pitfalls that may arise from misinterpreting it.\n",
-        "Please refer to it for a non technical explanation on why the model evaluation is giving a test accuracy of 97% when the model only got multi-labels correct for 30% of the data."
+        "It is up to us to understand and use it responsibly.<br>\n"
       ]
     }
   ]
